<resources>

    <!-- HOME PAGE-->
    <string name="app_name">Mad Rental</string>
    <string name="btn_res_name">Mes réservations</string>
    <string name="btn_profile_name">Mon profil</string>
    <string name="search_title_name">Lancer une recherche :</string>
    <string name="edit_text_start_name">Date de début de réservation</string>
    <string name="edit_text_end_name">Date de fin de réservation</string>
    <string name="btn_search_name">Rechercher</string>

    <!-- PROFILE PAGE -->
    <string name="profile_text">Merci de renseigner votre profil :</string>
    <string name="profile_edittext1">Nom</string>
    <string name="profile_edittext2">Prénom</string>
    <string name="profile_edittext3">Date de naissance</string>
    <string name="brofile_button">Valider</string>

    <!-- RESERVATION 1/2 page -->
    <string name="price_text">Prix :</string>
    <string name="category_text">Catégorie :</string>
    <string name="gear_text">Équipements :</string>
    <string name="options_title">OPTIONS</string>
    <string name="options_element_1">Mitrailleuse : 29 €</string>
    <string name="options_element_2">Lance-flamme : 49 €</string>
    <string name="res1_button">Suivant</string>

    <!-- RESERVATION 2/2 -->
    <string name="title_res2">Merci de saisir ici vos demandes spécifiques :</string>
    <string name="edit_text_your_message">Votre message...</string>
    <string name="final_price">Prix final : </string>
    <string name="btn_valider">Valider</string>

    <!-- SEARCH PAGE -->
    <string name="btn_filtre">Filtre</string>
    <!-- Fragment -->
    <string name="recherchefragment">En promotion uniquement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
