<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Main_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main_title"
            android:layout_marginBottom="@dimen/margin_main_title"
            android:text="@string/app_name"
            android:textColor="@color/title_color"
            android:textSize="@dimen/main_title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Btn-Reservations"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="@dimen/margin_button"
            android:layout_marginRight="@dimen/margin_button"
            android:background="@drawable/bouton"
            android:text="@string/btn_res_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

        <Button
            android:id="@+id/Btn-Profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_button"
            android:background="@drawable/bouton"
            android:text="@string/btn_profile_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:onClick="ProfileActivity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_search_area"
            android:text="@string/search_title_name"
            android:textColor="@color/dark"
            android:textSize="@dimen/secondary_title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/Start-Date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_editText"
            android:layout_marginLeft="@dimen/margin_edit_text"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_edit_text"
            android:background="@drawable/edit_text"
            android:hint="@string/edit_text_start_name"
            android:inputType="date"
            android:paddingLeft="@dimen/padding_edit_text"
            android:paddingRight="@dimen/padding_edit_text"
            android:textSize="@dimen/editText_size" />

        <EditText
            android:id="@+id/End-Date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_editText"
            android:layout_marginLeft="@dimen/margin_edit_text"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_edit_text"
            android:background="@drawable/edit_text"
            android:hint="@string/edit_text_end_name"
            android:inputType="date"
            android:paddingLeft="@dimen/padding_edit_text"
            android:paddingRight="@dimen/padding_edit_text"
            android:textSize="@dimen/editText_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_button"
            android:background="@drawable/bouton"
            android:text="@string/btn_search_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

</ScrollView>