<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Res2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/res2_title_margin"
            android:layout_marginTop="@dimen/margin_search_area"
            android:layout_marginRight="@dimen/res2_title_margin"
            android:gravity="center"
            android:text="@string/title_res2"
            android:textColor="@color/dark"
            android:textSize="@dimen/title_res2_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_editText_message"
            android:layout_marginLeft="@dimen/margin_edit_text"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_edit_text"
            android:background="@drawable/edit_text_message"
            android:hint="@string/edit_text_your_message"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/padding_edit_text"
            android:paddingRight="@dimen/padding_edit_text"
            android:textSize="@dimen/editText_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_search_area">

            <TextView
                android:id="@+id/final_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_switch"
                android:text="@string/final_price"
                android:textColor="@color/dark"
                android:textSize="@dimen/secondary_title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 'montant ici' "
                android:textColor="@color/dark"
                android:textSize="@dimen/secondary_title_size" />
        </LinearLayout>

        <Button
            android:id="@+id/Btn_valider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginRight="@dimen/margin_button"
            android:background="@drawable/bouton"
            android:text="@string/btn_valider"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>