<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Res1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vehicule_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buggy"
            android:textSize="@dimen/textview_size"
            android:textColor="@color/dark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prix :"
                android:textColor="@color/dark"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Catégorie :"
                android:textColor="@color/dark"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Equipements :"
                android:textColor="@color/dark"
                android:layout_gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="40dp">

            <TextView
                android:id="@+id/vehicule_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="' ici le prix '"
                android:textColor="@color/dark"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/vehicule_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="' ici la catégorie '"
                android:textColor="@color/dark"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/equipements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="' ici les équipements '"
                android:textColor="@color/dark"
                android:layout_gravity="right"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/options_box_padding"
            android:layout_marginTop="@dimen/options_box_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_title"
                android:textSize="@dimen/options_title_size"
                android:textStyle="bold"
                android:textColor="@color/dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_switch"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_element_1"
                    android:textSize="@dimen/options_element_size"
                    android:textColor="@color/dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="15dp">

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_switch"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_element_2"
                    android:textSize="@dimen/options_element_size"
                    android:textColor="@color/dark" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:layout_marginTop="@dimen/margin_btn_valider_res"
            android:layout_marginRight="@dimen/margin_button"
            android:background="@drawable/bouton"
            android:text="@string/res1_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</ScrollView>